# Minke

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: cd.yml  ci.yml
src/: attacks.cpp  attacks.h  benchmark.h  board.cpp  board.h  correction.cpp  correction.h  datagen.h  engine.cpp  engine.h  engine.hpp  evaluate.cpp  evaluate.h  evaluation.cpp  evaluation.hpp  game_elements.h  game_elements.hpp  game_state.cpp  game_state.h  hash.cpp  hash.h  hashing.cpp  hashing.h  hashing.hpp  history.cpp  history.h  incbin.h  init.cpp  init.h  main.cpp  minke.nnue  move.cpp  move.h  move_generation.cpp  move_generation.h  move_generation.hpp  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  (+35 more)
src/datagen/: datagen.h  marlinformat.h  packed_position.h  viriformat.h
src/eval/: accumulator.cpp  accumulator.h  arch.h  eval.h  finny_table.cpp  finny_table.h  nnue.cpp  nnue.h  pov_accumulator.cpp  pov_accumulator.h  simd.h
src/eval/nnue/: accumulator.cpp  accumulator.h  arch.h  finny_table.cpp  finny_table.h  pov_accumulator.cpp  pov_accumulator.h  simd.h
src/eval/nnue/simd/: avx2.h  avx512.h  neon.h
src/pyrrhic/: tbconfig.h  tbprobe.cpp
utils/: compare_perft.py  fen_list.txt  print_benchmark_fen_list.cpp
